k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rng-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rng-app
  template:
    metadata:
      labels:
        app: rng-app
    spec:
      containers:
        - name: rng-container
          image: ghcr.io/darkwinged/randomnamegenerator/rng-app:1.1.0
          ports:
            - containerPort: 2224
          volumeMounts:
            - name: data-volume
              mountPath: /app/racegendernames.yaml # Adjust the mount path
              subPath: racegendernames.yaml
      volumes:
        - name: data-volume
          configMap:
            name: racegendernames
