k8s/expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng-app-service-dev
spec:
  selector:
    app: rng-app
  ports:
    - protocol: TCP
      port: 2224
      targetPort: 2224
  type: ClusterIP
