k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rng-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: aux1-098c5ffa-0553-423e-b121-de76c17dbefa.live.alta3.com
    http:
      paths:
      - backend:
          service:
            name: rng-app-service-dev
            port:
              number: 2224
        path: / 
        pathType: Prefix
